--- a/BloodManagementSystem/BloodManagementSystem/App.config
+++ b/BloodManagementSystem/BloodManagementSystem/App.config
@@ -5,7 +5,7 @@
     </startup>
 	<connectionStrings>
 		<add name="dbcs"
-			 connectionString="Server = LAPTOP-2GJ2F7U2; Database = BloodBankSql; Integrated Security = True;"
+			 connectionString="Server = DESKTOP-O813SED\SQLEXPRESS; Database = BloodBankSql; Integrated Security = True;"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
