--- a/BloodManagementSystem/BloodManagementSystem.csproj
+++ b/BloodManagementSystem/BloodManagementSystem.csproj
@@ -509,7 +509,9 @@
     <None Include="Resources\search %281%29.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\blood fact 1.png" />
     <Content Include="Images\bloodfact2.jpg" />
+    <Content Include="Images\bloodfact3.png" />
     <Content Include="Images\bloodfact4.jpg" />
     <Content Include="Images\bloodfact5.jpg" />
   </ItemGroup>
